gralde配置